--- a/index.scss
+++ b/index.scss
@@ -7,6 +7,12 @@ $green: #3be23f;
 body{
     font-family: Helvetica;
 }
+
+.title{
+    color: $blue;
+}
+
+///// NAVIGATION /////
 #topNav{
     display: flex;
     justify-content: space-between;
@@ -28,16 +34,17 @@ body{
         height: 3em;
         border: 2px solid $yellow;
         border-radius: 25px;
+
     }
 }
+
+///// DATA /////
 
 #serialData{
     display: flex;
     flex-wrap: wrap;
 
-    .title{
-        color: $blue;
-    }
+
 
     img{
         margin: 0 1em 0.5em
@@ -50,5 +57,18 @@ body{
     
     p, h2 {
         text-align: center;
+    }
+}
+
+#actorData{
+    .pic_detail{
+        display: flex;
+
+        .details{
+            margin-left: 2em;
+            p{
+                max-width: 100ch;
+            }
+        }
     }
 }
