--- a/index.css
+++ b/index.css
@@ -38,41 +38,23 @@ body {
   border-radius: 25px;
 }
 
-#serialData {
+#serialData, #allDramas, #cast {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
 
-#serialData img {
-  margin: 0 1em 0.5em;
-}
-
-#serialData .drama {
-  margin: 1em;
-  border: 2px solid #2458a3;
-}
-
-#serialData p, #serialData h2 {
-  text-align: center;
-}
-
-#actorData .details {
-  margin-left: 2em;
-}
-
-#actorData .details p {
-  max-width: 100ch;
-}
-
-#allDramas {
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-#allDramas .drama {
+#serialData .drama, #serialData .actor, #allDramas .drama, #allDramas .actor, #cast .drama, #cast .actor {
   margin: 1em;
   border: 2px solid #2458a3;
   text-align: center;
   padding: 1em;
+}
+
+#actorData .details, #detailData .details {
+  margin-left: 2em;
+}
+
+#actorData .details p, #detailData .details p {
+  max-width: 100ch;
 }
 /*# sourceMappingURL=index.css.map */
